k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nudge
  labels:
    app.kubernetes.io/name: nudge
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nudge
                port:
                  name: http
